# exp

./: cgit-0.9.tar
aes/: tt.beam  tt.erl
autotut/: configure  configure.in
backtrace/: a.c  a.out
bit/: a.c  a.out  b.c  c.c
bittorrent/: bencode  bencode.c  test_alloc  test_alloc.c
brk/: a  a.c  a.out
case/: cc.erl
ceil/: m  m.c
createtable/: createtable.beam  createtable.erl  erl_crash.dump  music.txt  music1.txt
creg_parse/: a.c  a.out
crlf/: a.c  a.out
csep/: a.c  a.out  file.db
curl/: download  file_upload.c
d/: a.c  a.out  b.c  c.c  d.c
dbopen/: a.c
dialyzer/: q.erl
directory/: a.out  t.c
enter/: a.out  e.c
escript/: t  tt.beam  tt.erl
ets/: test_ets.beam  test_ets.erl
expat/: a.out  test.c
ffile/: a.c  a.out  test.sh
fgetc/: a.c  a.out  settings
flock/: a.c  a.out  f
foldl/: tt.beam  tt.erl
for/: a.c  a.out
fscanf/: a.c  a.out
gen_server/: gg.beam  gg.erl
http/: hc.beam  hc.erl
imgcmd/: img.beam  img.erl
init_add/: a  a.c  a.out  m.conf
inotify/: a.c  a.out
list_compare/: list_compare.beam  list_compare.erl
macro/: tt.erl
malloc/: a.c  a.out
math/: a.c  a.out
mem/: a.c  a.out
xev/xautomation-1.03/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  configure  configure.in  debug.c  debug.h  image.c  image.h  kbd.h  pat2ppm.1  pat2ppm.c  patextract.1  patextract.c  png2pat.1  png2pat.c  rgb2pat.1  rgb2pat.c  visgrep.1  visgrep.c  xautomation.7  xautomation.info  xmousepos.1  xmousepos.c  xte.1  xte.c
xev/xautomation-1.03/autom4te.cache/: output.1  requests  traces.0  traces.1
(+268 files in other folders)
